--- a/app/src/main/res/layout/activity_join.xml
+++ b/app/src/main/res/layout/activity_join.xml
@@ -76,19 +76,19 @@
         android:layout_width="0dp"
         android:layout_height="50dp"
         android:layout_marginTop="15dp"
-        android:background="@drawable/edittext_focus"
+        android:background="@drawable/edittext_border"
         android:ems="10"
         android:fontFamily="@font/sleigothic"
         android:hint="전화번호를 입력하세요"
         android:inputType="textPersonName|textPassword"
-        android:paddingLeft="15dp"
+        android:paddingLeft="18dp"
         app:layout_constraintEnd_toStartOf="@+id/guideline5"
         app:layout_constraintStart_toStartOf="@+id/guideline11"
         app:layout_constraintTop_toBottomOf="@+id/join_name" />
 
     <TextView
         android:id="@+id/join_title"
-        android:layout_width="125dp"
+        android:layout_width="0dp"
         android:layout_height="44dp"
         android:layout_marginTop="56dp"
         android:fontFamily="@font/sleigothic"
@@ -105,12 +105,12 @@
         android:layout_width="0dp"
         android:layout_height="50dp"
         android:layout_marginTop="15dp"
-        android:background="@drawable/edittext_focus"
+        android:background="@drawable/edittext_border"
         android:ems="10"
         android:fontFamily="@font/sleigothic"
         android:hint="비밀번호를 입력하세요"
         android:inputType="textPersonName|textPassword"
-        android:paddingLeft="15dp"
+        android:paddingLeft="18dp"
         app:layout_constraintEnd_toStartOf="@+id/guideline5"
         app:layout_constraintStart_toStartOf="@+id/guideline11"
         app:layout_constraintTop_toBottomOf="@+id/btn_idCheck" />
@@ -120,11 +120,12 @@
         android:layout_width="0dp"
         android:layout_height="50dp"
         android:background="@drawable/edittext_focus"
+        android:backgroundTint="@color/white"
         android:ems="10"
         android:fontFamily="@font/sleigothic"
         android:hint="아이디를 입력하세요"
         android:inputType="textPersonName|textPassword"
-        android:paddingLeft="15dp"
+        android:paddingLeft="18dp"
         app:layout_constraintEnd_toStartOf="@+id/guideline5"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/guideline11"
@@ -135,12 +136,12 @@
         android:layout_width="0dp"
         android:layout_height="50dp"
         android:layout_marginTop="15dp"
-        android:background="@drawable/edittext_focus"
+        android:background="@drawable/edittext_border"
         android:ems="10"
         android:fontFamily="@font/sleigothic"
         android:hint="이름을 입력하세요"
         android:inputType="textPersonName|textPassword"
-        android:paddingLeft="15dp"
+        android:paddingLeft="18dp"
         app:layout_constraintEnd_toStartOf="@+id/guideline5"
         app:layout_constraintStart_toStartOf="@+id/guideline11"
         app:layout_constraintTop_toBottomOf="@+id/join_pw" />
@@ -150,13 +151,14 @@
         android:layout_width="0dp"
         android:layout_height="40dp"
         android:layout_marginTop="15dp"
-        android:background="@drawable/button_click"
+        android:background="@drawable/box_yellow_round_gradation"
         android:fontFamily="@font/sleigothic"
         android:onClick="onclick"
         android:text="id check"
         android:textColor="@color/light_white"
         android:textSize="18sp"
-        app:backgroundTint="@null"
+        android:textStyle="bold"
+        app:backgroundTint="@color/prim"
         app:layout_constraintEnd_toStartOf="@+id/guideline18"
         app:layout_constraintStart_toStartOf="@+id/guideline15"
         app:layout_constraintTop_toBottomOf="@+id/join_id" />
@@ -172,6 +174,7 @@
         android:text="join"
         android:textColor="@color/light_white"
         android:textSize="18sp"
+        android:textStyle="bold"
         app:backgroundTint="@null"
         app:layout_constraintEnd_toStartOf="@+id/guideline5"
         app:layout_constraintStart_toStartOf="@+id/guideline11"
@@ -189,6 +192,7 @@
         android:text="back"
         android:textColor="#ffb606"
         android:textSize="18sp"
+        android:textStyle="bold"
         app:backgroundTint="@null"
         app:layout_constraintEnd_toStartOf="@+id/guideline18"
         app:layout_constraintStart_toStartOf="@+id/guideline15"
@@ -199,12 +203,12 @@
         android:layout_width="0dp"
         android:layout_height="50dp"
         android:layout_marginTop="15dp"
-        android:background="@drawable/edittext_focus"
+        android:background="@drawable/edittext_border"
         android:ems="10"
         android:fontFamily="@font/sleigothic"
         android:hint="소속을 입력하세요"
         android:inputType="textPersonName|textPassword"
-        android:paddingLeft="15dp"
+        android:paddingLeft="18dp"
         app:layout_constraintEnd_toStartOf="@+id/guideline5"
         app:layout_constraintStart_toStartOf="@+id/guideline11"
         app:layout_constraintTop_toBottomOf="@+id/join_tel" />
