--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -103,8 +103,10 @@
         android:fontFamily="@font/sleigothic"
         android:onClick="onclick"
         android:text="login"
+        android:textAlignment="center"
         android:textColor="@color/light_white"
         android:textSize="18sp"
+        android:textStyle="bold"
         app:backgroundTint="@null"
         app:layout_constraintEnd_toStartOf="@+id/guideline2"
         app:layout_constraintHorizontal_bias="0.0"
@@ -123,8 +125,10 @@
         android:paddingLeft="0dp"
         android:paddingRight="0dp"
         android:text="join us"
+        android:textAlignment="center"
         android:textColor="@color/light_white"
         android:textSize="18sp"
+        android:textStyle="bold"
         app:backgroundTint="@null"
         app:layout_constraintBottom_toTopOf="@+id/guideline8"
         app:layout_constraintEnd_toStartOf="@+id/guideline2"
