--- a/app/src/main/res/layout/all_worker_list.xml
+++ b/app/src/main/res/layout/all_worker_list.xml
@@ -17,43 +17,47 @@
         app:layout_constraintEnd_toStartOf="@+id/guideline26"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="@+id/guideline20"
-        app:layout_constraintTop_toTopOf="@+id/guideline31" />
+        app:layout_constraintTop_toTopOf="@+id/guideline31"
+        />
 
     <Button
         android:id="@+id/btn_back_medit2"
         android:layout_width="133dp"
         android:layout_height="43dp"
-        android:layout_marginStart="24dp"
+        android:layout_marginStart="10dp"
         android:background="@drawable/button_round_blank"
         android:backgroundTint="@color/light_white"
         android:fontFamily="@font/sleigothic"
         android:onClick="onclick"
+        android:paddingLeft="19dp"
+        android:paddingTop="5dp"
         android:text="상세보기"
+        android:textAlignment="viewStart"
         android:textColor="@color/light_white"
         android:textSize="16sp"
         app:backgroundTint="@null"
         app:layout_constraintBottom_toBottomOf="@+id/tv_id"
         app:layout_constraintStart_toEndOf="@+id/tv_id"
         app:layout_constraintTop_toTopOf="@+id/tv_id"
-        app:layout_constraintVertical_bias="0.65" />
+        app:layout_constraintVertical_bias="0.55" />
 
     <ImageView
         android:id="@+id/img"
-        android:layout_width="70dp"
-        android:layout_height="70dp"
+        android:layout_width="90dp"
+        android:layout_height="90dp"
         android:layout_marginStart="16dp"
         android:background="@drawable/icon_circle"
         android:backgroundTintMode="@null"
         app:layout_constraintBottom_toTopOf="@+id/guideline32"
         app:layout_constraintStart_toStartOf="@+id/guideline20"
         app:layout_constraintTop_toTopOf="@+id/guideline31"
-        tools:srcCompat="@drawable/worker" />
+        tools:srcCompat="@drawable/worker_icon" />
 
     <TextView
         android:id="@+id/tv_id"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
+        android:layout_marginStart="10dp"
         android:backgroundTint="@color/seco"
         android:fontFamily="@font/sleigothic"
         android:gravity="center"
@@ -61,9 +65,9 @@
         android:textColor="@color/seco"
         android:textSize="20sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/guideline32"
+        app:layout_constraintBottom_toBottomOf="@+id/img"
         app:layout_constraintStart_toEndOf="@+id/img"
-        app:layout_constraintTop_toTopOf="@+id/guideline31" />
+        app:layout_constraintTop_toTopOf="@+id/img" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline20"
@@ -92,5 +96,18 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         app:layout_constraintGuide_percent="0.2" />
+
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="32dp"
+        android:layout_height="32dp"
+        android:background="@drawable/ic_arrow_forward"
+        android:backgroundTint="#FFFFFF"
+        app:layout_constraintBottom_toBottomOf="@+id/btn_back_medit2"
+        app:layout_constraintEnd_toEndOf="@+id/btn_back_medit2"
+        app:layout_constraintHorizontal_bias="0.9"
+        app:layout_constraintStart_toStartOf="@+id/btn_back_medit2"
+        app:layout_constraintTop_toTopOf="@+id/btn_back_medit2"
+        app:layout_constraintVertical_bias="0.5" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
