--- a/app/src/main/res/layout/fragment_admin_edit.xml
+++ b/app/src/main/res/layout/fragment_admin_edit.xml
@@ -5,7 +5,7 @@
     android:id="@+id/frameLayout3"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/prim"
+    android:background="@drawable/gradation"
     tools:context=".AdminEditFragment">
 
     <androidx.constraintlayout.widget.Guideline
@@ -116,14 +116,14 @@
         android:id="@+id/btn_idcheck_edit"
         android:layout_width="0dp"
         android:layout_height="40dp"
-        android:layout_marginTop="12dp"
-        android:background="@drawable/button_click"
+        android:layout_marginTop="15dp"
+        android:background="@drawable/button_round_blank"
         android:fontFamily="@font/sleigothic"
         android:onClick="onclick"
         android:text="id check"
-        android:textColor="@color/light_white"
+        android:textColor="@color/prim"
         android:textSize="18sp"
-        app:backgroundTint="@null"
+        app:backgroundTint="@color/prim"
         app:layout_constraintEnd_toStartOf="@+id/guideline28"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/guideline29"
@@ -199,7 +199,7 @@
         android:id="@+id/checkBox_admin_edit"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="15dp"
         android:button="@drawable/admin_check"
         android:fontFamily="@font/sleigothic"
         android:gravity="center"
@@ -212,15 +212,15 @@
         android:id="@+id/btn_edit"
         android:layout_width="0dp"
         android:layout_height="40dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="15dp"
         android:background="@drawable/button_click"
         android:fontFamily="@font/sleigothic"
         android:text="저장"
         android:textColor="@color/light_white"
         android:textSize="18sp"
         app:backgroundTint="@null"
-        app:layout_constraintEnd_toStartOf="@+id/guideline28"
-        app:layout_constraintStart_toStartOf="@+id/guideline29"
+        app:layout_constraintEnd_toStartOf="@+id/guideline9"
+        app:layout_constraintStart_toStartOf="@+id/guideline14"
         app:layout_constraintTop_toBottomOf="@+id/checkBox_admin_edit" />
 
     <Button
