--- a/app/src/main/res/layout/fragment_machine.xml
+++ b/app/src/main/res/layout/fragment_machine.xml
@@ -14,7 +14,7 @@
     <ScrollView
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:backgroundTint="@color/prim"
+        android:background="@drawable/gradation"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -30,7 +30,6 @@
                 android:id="@+id/view"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
-                android:background="@drawable/box_yellow_round_gradation"
                 app:layout_constraintBottom_toTopOf="@+id/guideline21"
                 app:layout_constraintEnd_toEndOf="@id/guideline23"
                 app:layout_constraintStart_toStartOf="@id/guideline22"
@@ -102,7 +101,7 @@
                 android:layout_width="0dp"
                 android:layout_height="45dp"
                 android:layout_marginTop="15dp"
-                android:background="@drawable/button_click"
+                android:background="@drawable/button_round_blank"
                 android:fontFamily="@font/sleigothic"
                 android:onClick="onclick"
                 android:text="기기 수정"
@@ -117,22 +116,23 @@
                 android:id="@+id/m_title1"
                 android:layout_width="281dp"
                 android:layout_height="38dp"
-                android:layout_marginBottom="16dp"
+                android:layout_marginTop="5dp"
                 android:backgroundTint="@color/seco"
                 android:fontFamily="@font/sleigothic"
                 android:gravity="center"
                 android:text="기기 등록"
-                android:textSize="24sp"
-                app:layout_constraintBottom_toTopOf="@+id/m_id"
+                android:textColor="@color/light_white"
+                android:textSize="26sp"
                 app:layout_constraintEnd_toStartOf="@+id/guideline6"
-                app:layout_constraintStart_toStartOf="@+id/guideline4" />
+                app:layout_constraintStart_toStartOf="@+id/guideline4"
+                app:layout_constraintTop_toTopOf="@id/guideline2" />
 
             <Button
                 android:id="@+id/btn_register"
                 android:layout_width="0dp"
                 android:layout_height="47dp"
                 android:layout_marginTop="15dp"
-                android:background="@drawable/button_click"
+                android:background="@drawable/button_round_blank"
                 android:fontFamily="@font/sleigothic"
                 android:onClick="onclick"
                 android:text="기기 등록"
@@ -149,13 +149,13 @@
                 android:layout_height="43dp"
                 android:layout_marginTop="40dp"
                 android:background="@drawable/button_round_blank"
-                android:backgroundTint="@color/prim"
+                android:backgroundTint="@color/light_white"
                 android:fontFamily="@font/sleigothic"
                 android:onClick="onclick"
                 android:text="back"
-                android:textColor="#ffb606"
+                android:textColor="@color/light_white"
                 android:textSize="16sp"
-                app:backgroundTint="@null"
+                app:backgroundTint="@color/light_white"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/guideline6"
                 app:layout_constraintStart_toStartOf="@+id/guideline4"
@@ -165,19 +165,22 @@
                 android:id="@+id/m_title2"
                 android:layout_width="281dp"
                 android:layout_height="38dp"
+                android:layout_marginTop="5dp"
                 android:backgroundTint="@color/seco"
                 android:fontFamily="@font/sleigothic"
                 android:gravity="center"
                 android:text="기기 정보 수정"
-                android:textSize="24sp"
+                android:textColor="@color/light_white"
+                android:textSize="26sp"
                 app:layout_constraintEnd_toStartOf="@+id/guideline6"
                 app:layout_constraintStart_toStartOf="@+id/guideline4"
-                tools:layout_editor_absoluteY="406dp" />
+                app:layout_constraintTop_toTopOf="@id/guideline24" />
 
             <EditText
                 android:id="@+id/m_id"
                 android:layout_width="0dp"
                 android:layout_height="50dp"
+                android:layout_marginTop="15dp"
                 android:background="@drawable/edittext_focus"
                 android:backgroundTint="@color/white"
                 android:clickable="false"
@@ -189,7 +192,7 @@
                 app:layout_constraintEnd_toStartOf="@+id/guideline6"
                 app:layout_constraintHorizontal_bias="1.0"
                 app:layout_constraintStart_toStartOf="@+id/guideline4"
-                tools:layout_editor_absoluteY="170dp" />
+                app:layout_constraintTop_toBottomOf="@+id/m_title1" />
 
             <EditText
                 android:id="@+id/join_tel"
@@ -225,15 +228,18 @@
 
             <TextView
                 android:id="@+id/join_title"
+                top
                 android:layout_width="258dp"
-                android:layout_height="55dp"
-                android:layout_marginTop="40dp"
+                android:layout_height="42dp"
+                android:layout_marginTop="24dp"
+                android:layout_marginBottom="10dp"
                 android:backgroundTint="@color/seco"
                 android:fontFamily="@font/sleigothic"
                 android:gravity="center"
-                android:text="Machine resistration"
-                android:textSize="24sp"
+                android:text="안전모 기기 등록"
+                android:textSize="34sp"
                 android:textStyle="bold"
+                app:layout_constraintBottom_toTopOf="@+id/view"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.496"
                 app:layout_constraintStart_toStartOf="parent"
