--- a/app/src/main/res/layout/activity_join.xml
+++ b/app/src/main/res/layout/activity_join.xml
@@ -76,12 +76,13 @@
         android:layout_width="0dp"
         android:layout_height="50dp"
         android:layout_marginTop="15dp"
-        android:background="@drawable/edittext_border"
+        android:background="@drawable/edittext_focus"
         android:ems="10"
         android:fontFamily="@font/sleigothic"
         android:hint="전화번호를 입력하세요"
-        android:inputType="textPersonName|textPassword"
-        android:paddingLeft="18dp"
+        android:inputType="textPersonName"
+        android:paddingLeft="16dp"
+        android:textSize="16sp"
         app:layout_constraintEnd_toStartOf="@+id/guideline5"
         app:layout_constraintStart_toStartOf="@+id/guideline11"
         app:layout_constraintTop_toBottomOf="@+id/join_name" />
@@ -105,12 +106,13 @@
         android:layout_width="0dp"
         android:layout_height="50dp"
         android:layout_marginTop="15dp"
-        android:background="@drawable/edittext_border"
+        android:background="@drawable/edittext_focus"
         android:ems="10"
         android:fontFamily="@font/sleigothic"
         android:hint="비밀번호를 입력하세요"
-        android:inputType="textPersonName|textPassword"
-        android:paddingLeft="18dp"
+        android:inputType="textPassword"
+        android:paddingLeft="16dp"
+        android:textSize="16sp"
         app:layout_constraintEnd_toStartOf="@+id/guideline5"
         app:layout_constraintStart_toStartOf="@+id/guideline11"
         app:layout_constraintTop_toBottomOf="@+id/btn_idCheck" />
@@ -120,12 +122,12 @@
         android:layout_width="0dp"
         android:layout_height="50dp"
         android:background="@drawable/edittext_focus"
-        android:backgroundTint="@color/white"
         android:ems="10"
         android:fontFamily="@font/sleigothic"
         android:hint="아이디를 입력하세요"
-        android:inputType="textPersonName|textPassword"
-        android:paddingLeft="18dp"
+        android:inputType="textPersonName"
+        android:paddingLeft="16dp"
+        android:textSize="16sp"
         app:layout_constraintEnd_toStartOf="@+id/guideline5"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/guideline11"
@@ -136,12 +138,13 @@
         android:layout_width="0dp"
         android:layout_height="50dp"
         android:layout_marginTop="15dp"
-        android:background="@drawable/edittext_border"
+        android:background="@drawable/edittext_focus"
         android:ems="10"
         android:fontFamily="@font/sleigothic"
         android:hint="이름을 입력하세요"
-        android:inputType="textPersonName|textPassword"
-        android:paddingLeft="18dp"
+        android:inputType="textPersonName"
+        android:paddingLeft="16dp"
+        android:textSize="16sp"
         app:layout_constraintEnd_toStartOf="@+id/guideline5"
         app:layout_constraintStart_toStartOf="@+id/guideline11"
         app:layout_constraintTop_toBottomOf="@+id/join_pw" />
@@ -154,7 +157,7 @@
         android:background="@drawable/box_yellow_round_gradation"
         android:fontFamily="@font/sleigothic"
         android:onClick="onclick"
-        android:text="id check"
+        android:text="id 중복체크"
         android:textColor="@color/light_white"
         android:textSize="18sp"
         android:textStyle="bold"
@@ -171,11 +174,12 @@
         android:background="@drawable/button_click"
         android:fontFamily="@font/sleigothic"
         android:onClick="onclick"
-        android:text="join"
+        android:text="개인정보저장"
         android:textColor="@color/light_white"
         android:textSize="18sp"
         android:textStyle="bold"
         app:backgroundTint="@null"
+        app:layout_constraintBottom_toTopOf="@+id/guideline12"
         app:layout_constraintEnd_toStartOf="@+id/guideline5"
         app:layout_constraintStart_toStartOf="@+id/guideline11"
         app:layout_constraintTop_toBottomOf="@+id/managerCheck" />
@@ -185,13 +189,13 @@
         android:layout_width="0dp"
         android:layout_height="40dp"
         android:layout_marginTop="15dp"
-        android:background="@drawable/button_round_blank"
-        android:backgroundTint="@color/prim"
+        android:background="@drawable/button_round"
+        android:backgroundTint="#403B4A"
         android:fontFamily="@font/sleigothic"
         android:onClick="onclick"
-        android:text="back"
-        android:textColor="#ffb606"
-        android:textSize="18sp"
+        android:text="로그인 페이지로"
+        android:textColor="@color/light_white"
+        android:textSize="16sp"
         android:textStyle="bold"
         app:backgroundTint="@null"
         app:layout_constraintEnd_toStartOf="@+id/guideline18"
@@ -203,12 +207,13 @@
         android:layout_width="0dp"
         android:layout_height="50dp"
         android:layout_marginTop="15dp"
-        android:background="@drawable/edittext_border"
+        android:background="@drawable/edittext_focus"
         android:ems="10"
         android:fontFamily="@font/sleigothic"
         android:hint="소속을 입력하세요"
-        android:inputType="textPersonName|textPassword"
-        android:paddingLeft="18dp"
+        android:inputType="textPersonName"
+        android:paddingLeft="16dp"
+        android:textSize="16sp"
         app:layout_constraintEnd_toStartOf="@+id/guideline5"
         app:layout_constraintStart_toStartOf="@+id/guideline11"
         app:layout_constraintTop_toBottomOf="@+id/join_tel" />
