--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,5 @@
     <color name="seco">#1A1A1A</color>
     <color name="light_white">#F1F1FA</color>
     <color name="orange">#f7971e</color>
+    <color name="purple_black">#403B4A</color>
 </resources>
