--- a/app/src/main/res/drawable/edittext_focus.xml
+++ b/app/src/main/res/drawable/edittext_focus.xml
@@ -2,28 +2,41 @@
 
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 
-
-
     <!-- 에디트텍스트가 포커스를 받았을때의 모양 및 색상 -->
     <item android:state_focused="true">
-        <shape xmlns:android="http://schemas.android.com/apk/res/android">
-            <solid android:color="@color/light_white"/>
+        //선
+        <shape xmlns:android="http://schemas.android.com/apk/res/android"
+            android:shape="rectangle">
+            <solid android:color="@color/prim" android:width="5dp" />
+            <corners android:bottomLeftRadius="30dp"
+                        android:bottomRightRadius="30dp"
+                        android:topLeftRadius="30dp"
+                        android:topRightRadius="30dp"/>
+        </shape>
+
+    </item>
+
+    <item android:top="4dp"
+        android:right="4dp"
+        android:left="4dp"
+        android:bottom="4dp"
+        android:state_focused="true">
+        <shape android:shape="rectangle"
+            xmlns:android="http://schemas.android.com/apk/res/android">
+            <solid android:color="@color/white" />
             <corners android:bottomLeftRadius="30dp"
                 android:bottomRightRadius="30dp"
                 android:topLeftRadius="30dp"
                 android:topRightRadius="30dp"/>
-            <padding android:left="0dip" android:top="0dip" android:right="0dip" android:bottom="0dip" />
         </shape>
-        <stroke
-            android:width="5dp"
-            android:color="@color/prim" />
     </item>
+
 
     <!--EditText 가 포커스를 받지 않은 일반 상태-->
 
     <item android:state_focused="false">
             <shape xmlns:android="http://schemas.android.com/apk/res/android">
-                <solid android:color="@color/light_white"/>
+                <solid android:color="@color/white"/>
                 <corners android:bottomLeftRadius="30dp"
                     android:bottomRightRadius="30dp"
                     android:topLeftRadius="30dp"
