--- a/app/src/main/res/layout/fragment_admin_edit.xml
+++ b/app/src/main/res/layout/fragment_admin_edit.xml
@@ -139,7 +139,7 @@
         android:ems="10"
         android:fontFamily="@font/sleigothic"
         android:hint="수정할 비밀번호를 입력하세요"
-        android:inputType="textPersonName|textPassword"
+        android:inputType="textPassword"
         android:paddingLeft="10dp"
         app:layout_constraintEnd_toStartOf="@+id/guideline9"
         app:layout_constraintHorizontal_bias="0.508"
@@ -156,7 +156,7 @@
         android:ems="10"
         android:fontFamily="@font/sleigothic"
         android:hint="수정할 이름을 입력하세요"
-        android:inputType="textPersonName|textPassword"
+        android:inputType="textPersonName"
         android:paddingLeft="10dp"
         app:layout_constraintEnd_toStartOf="@+id/guideline9"
         app:layout_constraintStart_toStartOf="@+id/guideline14"
@@ -172,7 +172,7 @@
         android:ems="10"
         android:fontFamily="@font/sleigothic"
         android:hint="수정할 전화번호를 입력하세요"
-        android:inputType="textPersonName|textPassword"
+        android:inputType="textPersonName|phone"
         android:paddingLeft="10dp"
         app:layout_constraintEnd_toStartOf="@+id/guideline9"
         app:layout_constraintHorizontal_bias="0.508"
@@ -189,7 +189,7 @@
         android:ems="10"
         android:fontFamily="@font/sleigothic"
         android:hint="수정할 소속을 입력하세요"
-        android:inputType="textPersonName|textPassword"
+        android:inputType="textPersonName"
         android:paddingLeft="10dp"
         app:layout_constraintEnd_toStartOf="@+id/guideline9"
         app:layout_constraintStart_toStartOf="@+id/guideline14"
