--- a/app/src/main/res/layout/fragment_machine2_.xml
+++ b/app/src/main/res/layout/fragment_machine2_.xml
@@ -68,7 +68,7 @@
                 android:backgroundTint="@color/seco"
                 android:fontFamily="@font/sleigothic"
                 android:gravity="center"
-                android:text="기기 등록"
+                android:text="기기 정보 수정"
                 android:textColor="@color/light_white"
                 android:textSize="26sp"
                 app:layout_constraintEnd_toStartOf="@+id/guideline6"
@@ -148,14 +148,14 @@
             <TextView
                 android:id="@+id/join_title"
                 top
-                android:layout_width="258dp"
-                android:layout_height="42dp"
+                android:layout_width="300dp"
+                android:layout_height="44dp"
                 android:layout_marginTop="136dp"
                 android:layout_marginBottom="15dp"
                 android:backgroundTint="@color/seco"
                 android:fontFamily="@font/sleigothic"
                 android:gravity="center"
-                android:text="안전모 기기 등록"
+                android:text="안전모 기기 정보 수정"
                 android:textSize="34sp"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toTopOf="@+id/guideline2"
