--- a/app/src/main/res/layout/fragment_worker_list_page.xml
+++ b/app/src/main/res/layout/fragment_worker_list_page.xml
@@ -33,6 +33,27 @@
         app:layout_constraintTop_toTopOf="@+id/guideline31"
         app:layout_constraintVertical_bias="0.0" />
 
+    <Button
+        android:id="@+id/btn_back_medit7"
+        android:layout_width="133dp"
+        android:layout_height="43dp"
+        android:layout_marginStart="10dp"
+        android:background="@drawable/button_round_blank"
+        android:backgroundTint="@color/light_white"
+        android:fontFamily="@font/sleigothic"
+        android:onClick="onclick"
+        android:paddingLeft="19dp"
+        android:paddingTop="5dp"
+        android:text="목록으로"
+        android:textAlignment="viewEnd"
+        android:textColor="@color/light_white"
+        android:textSize="16sp"
+        app:backgroundTint="@null"
+        app:layout_constraintBottom_toBottomOf="@+id/tv_id"
+        app:layout_constraintStart_toEndOf="@+id/tv_id"
+        app:layout_constraintTop_toTopOf="@+id/tv_id"
+        app:layout_constraintVertical_bias="0.55" />
+
     <TextView
         android:id="@+id/tv_id"
         android:layout_width="wrap_content"
@@ -109,9 +130,9 @@
 
     <TextView
         android:id="@+id/textView2"
-        android:layout_width="32dp"
-        android:layout_height="32dp"
-        android:background="@drawable/ic_arrow_forward"
+        android:layout_width="28dp"
+        android:layout_height="28dp"
+        android:background="@drawable/edit"
         android:backgroundTint="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="@+id/btn_back_medit2"
         app:layout_constraintEnd_toEndOf="@+id/btn_back_medit2"
@@ -121,10 +142,10 @@
 
     <TextView
         android:id="@+id/textView3"
-        android:layout_width="32dp"
-        android:layout_height="32dp"
+        android:layout_width="28dp"
+        android:layout_height="28dp"
         android:layout_marginTop="4dp"
-        android:background="@drawable/ic_arrow_forward"
+        android:background="@drawable/sadface"
         android:backgroundTint="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="@+id/btn_back_medit5"
         app:layout_constraintEnd_toEndOf="@+id/btn_back_medit5"
@@ -213,34 +234,31 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.4" />
-
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guideline47"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.43" />
-
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guideline48"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.63" />
+        app:layout_constraintGuide_percent="0.5" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline32"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.85" />
+        app:layout_constraintGuide_percent="0.7" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline41"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.66" />
+        app:layout_constraintGuide_percent="0.55" />
+
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="32dp"
+        android:layout_height="32dp"
+        android:src="@drawable/ic_arrow_left"
+        app:layout_constraintBottom_toBottomOf="@+id/btn_back_medit7"
+        app:layout_constraintEnd_toEndOf="@+id/btn_back_medit7"
+        app:layout_constraintHorizontal_bias="0.1"
+        app:layout_constraintStart_toStartOf="@+id/btn_back_medit7"
+        app:layout_constraintTop_toTopOf="@+id/btn_back_medit7" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
