--- a/app/src/main/res/layout/fragment_machine2_.xml
+++ b/app/src/main/res/layout/fragment_machine2_.xml
@@ -68,7 +68,7 @@
                 android:backgroundTint="@color/seco"
                 android:fontFamily="@font/sleigothic"
                 android:gravity="center"
-                android:text="기기 정보 수정"
+                android:text="정보 수정"
                 android:textColor="@color/light_white"
                 android:textSize="26sp"
                 app:layout_constraintEnd_toStartOf="@+id/guideline6"
@@ -119,7 +119,7 @@
                 android:clickable="false"
                 android:ems="10"
                 android:fontFamily="@font/sleigothic"
-                android:hint="안전모ID를 입력하세요"
+                android:hint="수정할 안전모ID를 입력하세요"
                 android:inputType="textPersonName"
                 android:paddingLeft="18dp"
                 android:textSize="16sp"
@@ -137,7 +137,7 @@
                 android:backgroundTint="@color/white"
                 android:ems="10"
                 android:fontFamily="@font/sleigothic"
-                android:hint="근로자ID를 입력하세요"
+                android:hint="수정할 근로자ID를 입력하세요"
                 android:inputType="textPersonName"
                 android:paddingLeft="18dp"
                 android:textSize="16sp"
