--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -108,7 +108,6 @@
         android:textAlignment="center"
         android:textColor="@color/light_white"
         android:textSize="18sp"
-        android:textStyle="bold"
         app:backgroundTint="@null"
         app:layout_constraintEnd_toStartOf="@+id/guideline2"
         app:layout_constraintHorizontal_bias="0.0"
@@ -130,7 +129,6 @@
         android:textAlignment="center"
         android:textColor="@color/light_white"
         android:textSize="18sp"
-        android:textStyle="bold"
         app:backgroundTint="@null"
         app:layout_constraintBottom_toTopOf="@+id/guideline8"
         app:layout_constraintEnd_toStartOf="@+id/guideline2"
@@ -156,7 +154,7 @@
         android:id="@+id/checkBox"
         android:layout_width="133dp"
         android:layout_height="46dp"
-        android:button="@drawable/admin_check"
+        android:button="@drawable/checkbox_click"
         android:fontFamily="@font/sleigothic"
         android:text="자동 로그인"
         android:textColor="@color/seco"
