--- a/app/src/main/res/drawable/checkbox_click.xml
+++ b/app/src/main/res/drawable/checkbox_click.xml
@@ -1,27 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <!-- Unchecked -->
-    <item android:state_checked="false">
-        <shape>
-            <stroke android:color="@color/light_white" android:width="1dp" />
-            <corners android:radius="4dp" />
-            <solid android:color="@color/prim"/>
-        </shape>
-    </item>
-    <!-- Checked -->
-    <item android:state_checked="true">
-        <layer-list>
-            <!-- 배경 -->
-            <item>
-                <shape>
-                    <corners android:radius="4dp"/>
-                    <solid android:color="@color/prim"/>
-                </shape>
-            </item>
-            <!-- 이미지 영역 -->
-            <item android:drawable="@drawable/admin_check" android:top="4dp" android:right="4dp" android:bottom="4dp" android:left="4dp" />
-        </layer-list>
-    </item>
-</selector>
+    <selector
+        xmlns:android="http://schemas.android.com/apk/res/android">
+        <item android:state_checked="true" android:drawable="@drawable/checked" />
+        <item android:state_selected="true" android:drawable="@drawable/checked"></item>
+        <item android:state_pressed="true" android:drawable="@drawable/checked"></item>
+        <item android:state_checked="false" android:drawable="@drawable/ic_check_box_outline_blank" />
+    </selector>
+
 
 
