--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,6 +12,7 @@
         android:id="@+id/appBarLayout"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:background="@drawable/gradation_white"
         android:theme="@style/Theme.MyApplication3.AppBarOverlay"
         app:layout_constraintBottom_toTopOf="@+id/view_pager"
         app:layout_constraintEnd_toEndOf="parent"
@@ -36,6 +37,7 @@
         android:id="@+id/view_pager"
         android:layout_width="wrap_content"
         android:layout_height="0dp"
+        android:background="@drawable/gradation_white"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="@+id/appBarLayout"
