--- a/app/src/main/res/layout/all_worker_list.xml
+++ b/app/src/main/res/layout/all_worker_list.xml
@@ -8,6 +8,13 @@
     android:backgroundTint="@color/light_white">
 
 
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline47"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.94" />
+
     <View
         android:id="@+id/view3"
         android:layout_width="0dp"
@@ -37,9 +44,10 @@
         android:textSize="16sp"
         app:backgroundTint="@null"
         app:layout_constraintBottom_toBottomOf="@+id/tv_id"
+        app:layout_constraintEnd_toStartOf="@+id/guideline47"
         app:layout_constraintStart_toEndOf="@+id/tv_id"
         app:layout_constraintTop_toTopOf="@+id/tv_id"
-        app:layout_constraintVertical_bias="0.55" />
+        app:layout_constraintVertical_bias="0.56" />
 
     <ImageView
         android:id="@+id/img"
