--- a/app/src/main/res/layout/fragment_machine.xml
+++ b/app/src/main/res/layout/fragment_machine.xml
@@ -59,38 +59,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                app:layout_constraintGuide_percent="0.36" />
-
-            <TextView
-                android:id="@+id/m_title1"
-                android:layout_width="281dp"
-                android:layout_height="38dp"
-                android:backgroundTint="@color/seco"
-                android:fontFamily="@font/sleigothic"
-                android:gravity="center"
-                android:text="기기 등록"
-                android:textColor="@color/light_white"
-                android:textSize="26sp"
-                app:layout_constraintEnd_toStartOf="@+id/guideline6"
-                app:layout_constraintStart_toStartOf="@+id/guideline4"
-                app:layout_constraintTop_toTopOf="@id/guideline2" />
-
-            <TextView
-                android:id="@+id/m_title"
-                android:layout_width="281dp"
-                android:layout_height="38dp"
-                android:layout_marginBottom="20dp"
-                android:backgroundTint="@color/seco"
-                android:fontFamily="@font/sleigothic"
-                android:gravity="center"
-                android:text="기기 정보 수정"
-                android:textColor="@color/light_white"
-                android:textSize="16sp"
-                app:layout_constraintBottom_toTopOf="@+id/guideline25"
-                app:layout_constraintEnd_toStartOf="@+id/guideline6"
-                app:layout_constraintStart_toStartOf="@+id/guideline4"
-                app:layout_constraintTop_toBottomOf="@+id/btn_register"
-                app:layout_constraintVertical_bias="1.0" />
+                app:layout_constraintGuide_percent="0.45" />
 
             <Button
                 android:id="@+id/btn_register"
@@ -113,7 +82,6 @@
                 android:id="@+id/m_id"
                 android:layout_width="0dp"
                 android:layout_height="50dp"
-                android:layout_marginTop="15dp"
                 android:background="@drawable/edittext_focus"
                 android:backgroundTint="@color/white"
                 android:clickable="false"
@@ -126,7 +94,7 @@
                 app:layout_constraintEnd_toStartOf="@+id/guideline6"
                 app:layout_constraintHorizontal_bias="1.0"
                 app:layout_constraintStart_toStartOf="@+id/guideline4"
-                app:layout_constraintTop_toBottomOf="@+id/m_title1" />
+                app:layout_constraintTop_toTopOf="@+id/guideline2" />
 
             <EditText
                 android:id="@+id/w_id"
@@ -164,12 +132,25 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
-            <androidx.constraintlayout.widget.Guideline
-                android:id="@+id/guideline21"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                app:layout_constraintGuide_percent="0.7" />
+            <TextView
+                android:id="@+id/m_title2"
+                android:layout_width="255dp"
+                android:layout_height="37dp"
+                android:layout_marginTop="40dp"
+                android:layout_marginBottom="60dp"
+                android:backgroundTint="@color/seco"
+                android:drawableRight="@drawable/ic_arrow_forward"
+                android:drawablePadding="-52dp"
+                android:fontFamily="@font/sleigothic"
+                android:gravity="center"
+                android:text="기기 정보 수정"
+                android:textColor="@color/light_white"
+                android:textSize="16sp"
+                app:layout_constraintBottom_toTopOf="@+id/guideline25"
+                app:layout_constraintEnd_toStartOf="@+id/guideline6"
+                app:layout_constraintStart_toStartOf="@+id/guideline4"
+                app:layout_constraintTop_toBottomOf="@+id/btn_register"
+                app:layout_constraintVertical_bias="1.0" />
 
             <androidx.constraintlayout.widget.Guideline
                 android:id="@+id/guideline25"
