--- a/app/src/main/res/layout/fragment_machine2_.xml
+++ b/app/src/main/res/layout/fragment_machine2_.xml
@@ -59,31 +59,20 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                app:layout_constraintGuide_percent="0.36" />
-
-            <TextView
-                android:id="@+id/m_title1"
-                android:layout_width="281dp"
-                android:layout_height="38dp"
-                android:backgroundTint="@color/seco"
-                android:fontFamily="@font/sleigothic"
-                android:gravity="center"
-                android:text="정보 수정"
-                android:textColor="@color/light_white"
-                android:textSize="26sp"
-                app:layout_constraintEnd_toStartOf="@+id/guideline6"
-                app:layout_constraintStart_toStartOf="@+id/guideline4"
-                app:layout_constraintTop_toTopOf="@id/guideline2" />
+                app:layout_constraintGuide_percent="0.45" />
 
             <TextView
                 android:id="@+id/m_title"
-                android:layout_width="281dp"
-                android:layout_height="38dp"
-                android:layout_marginBottom="20dp"
+                android:layout_width="247dp"
+                android:layout_height="42dp"
+                android:layout_marginTop="40dp"
+                android:layout_marginBottom="40dp"
                 android:backgroundTint="@color/seco"
+                android:drawableStart="@drawable/ic_arrow_left"
+                android:drawablePadding="-52dp"
                 android:fontFamily="@font/sleigothic"
                 android:gravity="center"
-                android:text="기기 정보 수정"
+                android:text="기기 정보 등록으로 "
                 android:textColor="@color/light_white"
                 android:textSize="16sp"
                 app:layout_constraintBottom_toTopOf="@+id/guideline25"
@@ -113,7 +102,6 @@
                 android:id="@+id/m_id"
                 android:layout_width="0dp"
                 android:layout_height="50dp"
-                android:layout_marginTop="15dp"
                 android:background="@drawable/edittext_focus"
                 android:backgroundTint="@color/white"
                 android:clickable="false"
@@ -124,9 +112,9 @@
                 android:paddingLeft="18dp"
                 android:textSize="16sp"
                 app:layout_constraintEnd_toStartOf="@+id/guideline6"
-                app:layout_constraintHorizontal_bias="1.0"
+                app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="@+id/guideline4"
-                app:layout_constraintTop_toBottomOf="@+id/m_title1" />
+                app:layout_constraintTop_toTopOf="@+id/guideline2" />
 
             <EditText
                 android:id="@+id/w_id"
@@ -163,13 +151,6 @@
                 app:layout_constraintHorizontal_bias="0.575"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
-
-            <androidx.constraintlayout.widget.Guideline
-                android:id="@+id/guideline21"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                app:layout_constraintGuide_percent="0.7" />
 
             <androidx.constraintlayout.widget.Guideline
                 android:id="@+id/guideline25"
