--- a/app/src/main/res/layout/fragment_worker_list_page.xml
+++ b/app/src/main/res/layout/fragment_worker_list_page.xml
@@ -9,6 +9,27 @@
     tools:context=".worker_list_pageFragment">
 
 
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline21"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.3" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline50"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.12" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline24"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.7" />
+
     <TextView
         android:id="@+id/textView4"
         android:layout_width="32dp"
@@ -33,27 +54,6 @@
         app:layout_constraintTop_toTopOf="@+id/guideline31"
         app:layout_constraintVertical_bias="0.0" />
 
-    <Button
-        android:id="@+id/btn_back_medit7"
-        android:layout_width="133dp"
-        android:layout_height="43dp"
-        android:layout_marginStart="10dp"
-        android:background="@drawable/button_round_blank"
-        android:backgroundTint="@color/light_white"
-        android:fontFamily="@font/sleigothic"
-        android:onClick="onclick"
-        android:paddingLeft="19dp"
-        android:paddingTop="5dp"
-        android:text="목록으로"
-        android:textAlignment="viewEnd"
-        android:textColor="@color/light_white"
-        android:textSize="16sp"
-        app:backgroundTint="@null"
-        app:layout_constraintBottom_toBottomOf="@+id/tv_id"
-        app:layout_constraintStart_toEndOf="@+id/tv_id"
-        app:layout_constraintTop_toTopOf="@+id/tv_id"
-        app:layout_constraintVertical_bias="0.55" />
-
     <TextView
         android:id="@+id/tv_id"
         android:layout_width="wrap_content"
@@ -70,48 +70,129 @@
         app:layout_constraintStart_toEndOf="@+id/img"
         app:layout_constraintTop_toTopOf="@+id/img" />
 
-    <TextView
-        android:id="@+id/tv_id2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:fontFamily="@font/sleigothic"
-        android:gravity="center"
-        android:text="안전모 잠금 여부"
-        android:textColor="@color/orange"
-        android:textSize="20sp"
-        android:textStyle="bold"
-        tools:layout_editor_absoluteX="57dp"
-        tools:layout_editor_absoluteY="172dp" />
+    <View
 
-    <TextView
-        android:id="@+id/tv_id3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:fontFamily="@font/sleigothic"
-        android:gravity="center"
-        android:text="안전교육 수료 여부"
-        android:textColor="@color/prim"
-        android:textSize="20sp"
-        android:textStyle="bold"
-        tools:layout_editor_absoluteX="211dp"
-        tools:layout_editor_absoluteY="172dp" />
+        android:id="@+id/view"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:background="@drawable/box_yellow_round_gradation_30dp"
+        android:backgroundTint="@color/light_white"
+
+        app:layout_constraintBottom_toTopOf="@+id/guideline46"
+        app:layout_constraintEnd_toStartOf="@+id/guideline44"
+        app:layout_constraintStart_toStartOf="@+id/guideline43"
+        app:layout_constraintTop_toTopOf="@+id/guideline45"
+        app:layout_constraintVertical_bias="0.413"
+        />
 
     <View
+
         android:id="@+id/view5"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:background="@drawable/box_yellow_round_gradation_30dp"
         android:backgroundTint="@color/light_white"
-        android:elevation="10dp"
-        app:layout_constraintBottom_toTopOf="@+id/guideline46"
+
+        app:layout_constraintBottom_toTopOf="@+id/guideline41"
         app:layout_constraintEnd_toStartOf="@+id/guideline44"
         app:layout_constraintStart_toStartOf="@+id/guideline43"
-        app:layout_constraintTop_toTopOf="@+id/guideline45"
-        app:layout_constraintVertical_bias="0.413" />
+        app:layout_constraintTop_toTopOf="@+id/guideline48"
+        />
+
+    <Button
+        android:id="@+id/btn_back_medit7"
+        android:layout_width="133dp"
+        android:layout_height="43dp"
+        android:layout_marginStart="10dp"
+        android:background="@drawable/button_round_blank"
+        android:backgroundTint="@color/light_white"
+        android:fontFamily="@font/sleigothic"
+        android:onClick="onclick"
+        android:paddingLeft="22dp"
+        android:paddingTop="5dp"
+        android:text="목록으로"
+        android:textAlignment="viewEnd"
+        android:textColor="@color/light_white"
+        android:textSize="16sp"
+        app:backgroundTint="@null"
+        app:layout_constraintBottom_toBottomOf="@+id/tv_id"
+        app:layout_constraintEnd_toStartOf="@+id/guideline44"
+        app:layout_constraintStart_toEndOf="@+id/tv_id"
+        app:layout_constraintTop_toTopOf="@+id/tv_id"
+        app:layout_constraintVertical_bias="0.55" />
+
+    <TableLayout
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toTopOf="@+id/guideline52"
+        app:layout_constraintEnd_toStartOf="@+id/guideline51"
+        app:layout_constraintStart_toStartOf="@+id/guideline50"
+        app:layout_constraintTop_toTopOf="@+id/guideline53">
+
+        <TableRow
+            android:layout_width="wrap_content"
+            android:layout_height="10dp"
+            android:layout_marginTop="10dp"
+            android:background="@color/prim">
+
+            <TextView
+                android:id="@+id/tv_id2"
+                android:layout_width="136dp"
+                android:layout_height="35dp"
+                android:layout_weight="1"
+                android:fontFamily="@font/sleigothic"
+                android:gravity="center"
+                android:text="안전모 잠금 여부"
+                android:textColor="@color/black"
+                android:textSize="20sp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/tv_id3"
+                android:layout_width="wrap_content"
+                android:layout_height="35dp"
+                android:layout_weight="1"
+                android:fontFamily="@font/sleigothic"
+                android:gravity="center"
+                android:text="안전교육 수료 여부"
+                android:textColor="@color/seco"
+                android:textSize="20sp"
+                android:textStyle="bold" />
+        </TableRow>
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="117dp"
+            android:layout_marginTop="10dp">
+
+            <TextView
+                android:id="@+id/textView6"
+                android:layout_width="120dp"
+                android:layout_height="120dp"
+                android:layout_weight="1"
+                android:backgroundTint="@color/prim"
+                android:drawableTop="@drawable/icon_size_happay"
+                android:drawablePadding="5dp"
+                android:padding="20dp"
+                app:drawableTint="@color/prim" />
+
+            <TextView
+                android:id="@+id/textView9"
+                android:layout_width="120dp"
+                android:layout_height="120dp"
+                android:layout_weight="1"
+                android:backgroundTint="@color/prim"
+                android:drawableTop="@drawable/icon_size_shock"
+                android:drawablePadding="5dp"
+                android:padding="20dp" />
+
+        </TableRow>
+
+    </TableLayout>
 
     <Button
         android:id="@+id/btn_back_medit2"
-        android:layout_width="175dp"
+        android:layout_width="0dp"
         android:layout_height="42dp"
         android:background="@drawable/button_round_blank"
         android:backgroundTint="@color/light_white"
@@ -124,14 +205,15 @@
         android:textColor="@color/light_white"
         android:textSize="16sp"
         app:backgroundTint="@null"
-        app:layout_constraintEnd_toStartOf="@+id/guideline26"
-        app:layout_constraintStart_toStartOf="@+id/guideline20"
-        app:layout_constraintTop_toTopOf="@+id/guideline41" />
+        app:layout_constraintBottom_toTopOf="@+id/guideline49"
+        app:layout_constraintEnd_toStartOf="@+id/guideline24"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/guideline21" />
 
     <TextView
         android:id="@+id/textView2"
-        android:layout_width="28dp"
-        android:layout_height="28dp"
+        android:layout_width="25dp"
+        android:layout_height="25dp"
         android:background="@drawable/edit"
         android:backgroundTint="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="@+id/btn_back_medit2"
@@ -142,11 +224,11 @@
 
     <TextView
         android:id="@+id/textView3"
-        android:layout_width="28dp"
-        android:layout_height="28dp"
-        android:layout_marginTop="4dp"
+        android:layout_width="25dp"
+        android:layout_height="25dp"
+        android:layout_marginTop="6dp"
         android:background="@drawable/sadface"
-        android:backgroundTint="#FFFFFF"
+        android:backgroundTint="@color/seco"
         app:layout_constraintBottom_toBottomOf="@+id/btn_back_medit5"
         app:layout_constraintEnd_toEndOf="@+id/btn_back_medit5"
         app:layout_constraintHorizontal_bias="0.91"
@@ -156,22 +238,22 @@
 
     <Button
         android:id="@+id/btn_back_medit5"
-        android:layout_width="175dp"
+        android:layout_width="0dp"
         android:layout_height="42dp"
         android:layout_marginTop="15dp"
         android:background="@drawable/button_round_blank"
-        android:backgroundTint="@color/light_white"
+        android:backgroundTint="@color/seco"
         android:fontFamily="@font/sleigothic"
         android:onClick="onclick"
         android:paddingLeft="19dp"
         android:paddingTop="5dp"
         android:text="근로자삭제"
         android:textAlignment="viewStart"
-        android:textColor="@color/light_white"
+        android:textColor="@color/seco"
         android:textSize="16sp"
         app:backgroundTint="@null"
-        app:layout_constraintEnd_toStartOf="@+id/guideline26"
-        app:layout_constraintStart_toStartOf="@+id/guideline20"
+        app:layout_constraintEnd_toStartOf="@+id/guideline24"
+        app:layout_constraintStart_toStartOf="@+id/guideline21"
         app:layout_constraintTop_toBottomOf="@+id/btn_back_medit2" />
 
     <ImageView
@@ -209,6 +291,13 @@
         app:layout_constraintGuide_percent="0.94" />
 
     <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline51"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.88" />
+
+    <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline26"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -234,21 +323,49 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.48" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline52"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.46" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline53"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.22" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline48"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
         app:layout_constraintGuide_percent="0.5" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline49"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.83" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline32"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.7" />
+        app:layout_constraintGuide_percent="0.95" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline41"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.55" />
+        app:layout_constraintGuide_percent="0.75" />
 
     <ImageView
         android:id="@+id/imageView2"
